--- a/scss/_c-logo.scss
+++ b/scss/_c-logo.scss
@@ -8,6 +8,10 @@
 
   img {
     width: 100%;
+    transition: 0.3s width;
+    .minimize & {
+      width: 50%
+    }
   }
 
   @media (min-width: $g-bp-2) {
