--- a/scss/global.scss
+++ b/scss/global.scss
@@ -43,4 +43,3 @@
 // External
 @import "_prism";
 
-html {scroll-behavior: smooth;} //todo do we have a place for globals?
